--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ function toggleMusic() {
     <!-- Ángel izquierdo -->
     <div class="angel-frame left">
       <div class="angel-img-wrapper">
-        <img src="B.PNG" alt="Angelito" onerror="this.parentNode.innerHTML='<div class=\'img-placeholder\'>👼</div>'">
+        <img src="b.png" alt="Angelito" onerror="this.parentNode.innerHTML='<div class=\'img-placeholder\'>👼</div>'">
       </div>
     </div>
 
@@ -616,7 +616,7 @@ function toggleMusic() {
     <div class="baby-frame">
       <div class="image-glow-ring"></div>
       <div class="baby-img-wrapper">
-        <img src="A.PNG" alt="Bebé" onerror="this.parentNode.innerHTML='<div class=\'img-placeholder\'>👶</div>'">
+        <img src="a.png" alt="Bebé" onerror="this.parentNode.innerHTML='<div class=\'img-placeholder\'>👶</div>'">
       </div>
       <div class="halo-decoration"></div>
     </div>
