--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ function toggleMusic() {
     <!-- Ángel derecho (espejado) -->
     <div class="angel-frame right">
       <div class="angel-img-wrapper">
-        <img src="B.PNG" alt="Angelito" onerror="this.parentNode.innerHTML='<div class=\'img-placeholder\'>🕊️</div>'" style="transform:scaleX(-1)">
+        <img src="b.png" alt="Angelito" onerror="this.parentNode.innerHTML='<div class=\'img-placeholder\'>🕊️</div>'" style="transform:scaleX(-1)">
       </div>
     </div>
 
